--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,13 @@
     "psr-4": {
       "fauxcompany\\EscreveNumero\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+        "fauxcompany\\EscreveNumero\\Test\\": "tests/"
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.8.36"
   }
 }
